# mlcm

./: .gitignore  mlcm_analysis.py  pyproject.toml  utils.py
.github/workflows/: ci-tests.yml  lint.yml  test.yml
analysis/: README.md  __init__.py  analysis-mlcm.Rmd  analysis_mlcm.R  analysis_separate_scaling.R  comparemodels.R  exploring_analysis_separate_scaling.R  fitting_scales.py  gof_mlcm.R  gofutils.R  mlcm_brglm.R  mlcm_functions.R  pbinom.diagnostics.mlcm.R  pbinom.diagnostics.mlcm.brglm.R  pboot.mlcm.R  pboot.mlcm.brglm.R  plot_gof_mlcm.py  plot_mlcm.py  plot_mlcm_matrices.py  plotting.py  postprocess.py  preprocess.py  run_analysis_mlcm.R  scales.py  separate_scales.R  testing_thurstone_pkg.R  utilsbootstrap.py
data/results/: example-data.csv
docs/: choice_frequencies.py  trials_MLCM_SF_contrast.csv
mlcm/: __init__.py  _wrangle.py  frequencies.py  plotting.py  scale_estimation.py  utils.py
simulation_mlcm/: analysis_mlcm.R  comparemodels.R  gof_mlcm.R
tests/: conftest.py  test_frequencies.py  test_scale_estimation.py  test_utils.py  test_wrangling.py  tiny_data.csv
tests/example_datasets/: scales_BumpyGlossy.csv  scales_GlossyBumpy.csv  test_BumpyGlossy.R  test_GlossyBumpy.R  test_bumpy_glossy.py  test_glossy_bumpy.py  trials_BumpyGlossy.csv  trials_GlossyBumpy.csv  wrangled_BumpyGlossy.csv  wrangled_GlossyBumpy.csv
