[project]
name = "mlcm"
description = "Maximum-Likelihood Conjoint Measurement analysis library"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: R",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

authors = [
    { name = "Guillermo Aguilar", email = "guillermo.aguilar@mail.tu-berlin.de" },
    { name = "Joris Vincent", email = "j.vincent@tu-berlin.de" },
]
maintainers = [
    { name = "Guillermo Aguilar", email = "guillermo.aguilar@mail.tu-berlin.de" },
    { name = "Joris Vincent", email = "j.vincent@tu-berlin.de" },
]

version = "0.0.1"


requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "pandas", "rpy2"]

[dependency-groups]
test = ["pytest"]
docs = ["jupytext>=1.13.3", "ipykernel"]
dev = [
    "ruff",
    "codespell",
    { include-group = "test" },
    { include-group = "docs" },
]


[project.urls]
repository = "https://github.com/computational-psychology/mlcm.git"

[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "mlcm*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)


[tool.ruff]
line-length = 99
